fixed last cell in 1.2 ntbk

--- a/notebooks/1.2-ks-race-pace-analysis.ipynb
+++ b/notebooks/1.2-ks-race-pace-analysis.ipynb
@@ -329,7 +329,7 @@
     }
    ],
    "source": [
-    "driver_race_pace_laps"
+    "driver_race_pace_data"
    ],
    "metadata": {
     "collapsed": false,
